# zametki

./: .gitignore  .qmlls.ini  CMakeLists.txt  FolderNoteList.qml  Handlers.mjs  Main.qml  MainHeaderBar.qml  SidebarPanel.qml  filecreator.cpp  filecreator.h  main.cpp  mainwindow.cpp  mainwindow.ui  test_main.cpp
.claude/agents/: Claude.agent.md
include/: filecreator.h
qml/: AuthPage.qml  CreationBD.qml  Main.qml  Profile.qml  Search.qml  Settings.qml  SettingsWindow.qml  Share.qml  asd.qml  qmldir
qml/components/: AppActionButton.qml  AppActionButtonCompact.qml  AppBodyText.qml  AppButton.qml  AppDescriptionText.qml  AppDivider.qml  AppDropdown.qml  AppIconSurfaceButton.qml  AppInitialsAvatar.qml  AppInputField.qml  AppModalOverlay.qml  AppPageTitleText.qml  AppSectionCard.qml  AppSectionTitleText.qml  AppSettingsRowLabel.qml  AppSidebarLabelText.qml  AppSwitch.qml  FolderNoteList.qml  MainHeaderBar.qml  SidebarPanel.qml  qmldir
qml/components/auth/: AuthDivider.qml  AuthErrorText.qml  AuthFormSubtitleText.qml  AuthFormTitleText.qml  AuthInputField.qml  AuthLinkButton.qml  AuthModeTabButton.qml  AuthPrimaryButton.qml  AuthSocialButton.qml  LoginForm.qml  RegisterForm.qml
qml/components/common/: BaseCard.qml
qml/components/main/: MainModalOverlay.qml
qml/components/search/: SearchFooterHint.qml  SearchHintsBar.qml  SearchInputBar.qml  SearchResultRow.qml  SearchSectionHeader.qml
qml/components/settings/: SettingsActionButton.qml  SettingsActionButtonCompact.qml  SettingsBodyPrimaryText.qml  SettingsControlRow.qml  SettingsDescriptionText.qml  SettingsDivider.qml  SettingsDropdown.qml  SettingsInputField.qml  SettingsKeyValueRow.qml  SettingsNavItem.qml  SettingsPageTitleText.qml  SettingsRowLabel.qml  SettingsSectionCard.qml  SettingsSectionTitleText.qml  SettingsSidebarLabelText.qml
qml/components/share/: ShareParticipantRow.qml  qmldir
qml/scripts/: DesignTokens.js  Handlers.mjs  Theme.js  ThemeSingleton.qml  qmldir
src/: filecreator.cpp  main.cpp
